add forgot and reset password api to FE and update swagger
